# tm-extractor

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: daily.yml  keepalive.yml  manual.yml  publish.yml  test.yml
infra/systemd/: .env.example  README.md  tm-extractor.service  tm-extractor.timer
src/tm_extractor/: __init__.py
tests/: test_smoke.py
